Added/Modified gs-apps/test-app.yaml

--- a/gs-apps/test-app.yaml
+++ b/gs-apps/test-app.yaml
@@ -15,7 +15,7 @@ spec:
     namespace: gs-apps
   syncPolicy:
     automated:
-      prune: false
+      prune: true
       selfHeal: true
       allowEmpty: false
     syncOptions:
