--- a/final-apps/guest-book-1.yaml
+++ b/final-apps/guest-book-1.yaml
@@ -5,7 +5,7 @@ metadata:
   finalizers:
     - resources-finalizer.argocd.argoproj.io/foreground
 spec:
-  project: default
+  project: test
   source:
     path: helm-guestbook
     repoURL: https://github.com/yaroslav-codefresh/argocd-example-apps.git
