--- a/apps-chart/templates/guestbook-2.app.yaml
+++ b/apps-chart/templates/guestbook-2.app.yaml
@@ -1,18 +1,18 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: guestbook-1
+  name: {{ .Values.spec.product }}-{{ .Values.spec.service }}-app-2
   finalizers:
     - resources-finalizer.argocd.argoproj.io/foreground
 spec:
-  project: test
+  project: default
   source:
     path: helm-guestbook
     repoURL: https://github.com/yaroslav-codefresh/argocd-example-apps.git
     targetRevision: HEAD
   destination:
     name: in-cluster
-    namespace: gs-apps
+    namespace: {{ .Values.spec.product }}-{{ .Values.spec.service }}
   syncPolicy:
     automated:
       prune: false
