--- a/services-chart/templates/service-9.yaml
+++ b/services-chart/templates/service-9.yaml
@@ -15,6 +15,7 @@ spec:
         spec:
           service: service-9
           product: {{ .Values.spec.product }}
+          cluster: {{ .Values.spec.cluster }}
   destination:
     name: in-cluster
     namespace: cf-runtime
