--- a/apps-chart/templates/appset-3.yaml
+++ b/apps-chart/templates/appset-3.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-  name: {{ .Values.spec.product }}-{{ .Values.spec.service }}-appset-3
+  name: {{ .Values.spec.product }}-{{ .Values.spec.service }}-prod-appset-3
   finalizers:
     - resources-finalizer.argocd.argoproj.io/foreground
 spec:
@@ -15,17 +15,17 @@ spec:
     preserveResourcesOnDeletion: false
   template:
     metadata:
-      name: {{ .Values.spec.product }}-{{ .Values.spec.service }}-appset-3-app-{{`{{appCount}}`}}
+      name: {{ .Values.spec.product }}-{{ .Values.spec.service }}-prod-3-app-{{`{{appCount}}`}}
       finalizers:
         - resources-finalizer.argocd.argoproj.io/foreground
     spec:
       project: default
       source:
-        path: helm-guestbook
-        repoURL: https://github.com/yaroslav-codefresh/argocd-example-apps.git
+        path: {{ .Values.spec.prod.path }}
+        repoURL: {{ .Values.spec.prod.repoUrl }}
         targetRevision: HEAD
       destination:
-        name: {{ .Values.spec.cluster }}
+        name: {{ .Values.spec.prod.cluster }}
         namespace: {{ .Values.spec.product }}-{{ .Values.spec.service }}
       syncPolicy:
         automated:
