--- a/apps-chart/values.yaml
+++ b/apps-chart/values.yaml
@@ -1,4 +1,11 @@
 spec:
   product: test-product
   service: test-service
-  cluster: in-cluster
+  prod:
+    repoUrl: https://github.com/yaroslav-codefresh/argocd-example-apps.git
+    cluster: in-cluster
+    path: helm-guestbook
+  dev:
+    repoUrl: https://github.com/yaroslav-codefresh/argocd-example-apps.git
+    cluster: in-cluster
+    path: helm-guestbook
