--- a/apps-chart/templates/dev-app-3.yaml
+++ b/apps-chart/templates/dev-app-3.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: {{ .Values.spec.product }}-{{ .Values.spec.service }}-dev-app-3
+  name: dev-{{ .Values.spec.product }}-{{ .Values.spec.service }}-app-3
   finalizers:
     - resources-finalizer.argocd.argoproj.io/foreground
 spec:
