--- a/apps-chart/templates/prod-appset-4.yaml
+++ b/apps-chart/templates/prod-appset-4.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-  name: {{ .Values.spec.product }}-{{ .Values.spec.service }}-prod-appset-4
+  name: prod-{{ .Values.spec.product }}-{{ .Values.spec.service }}-appset-4
   finalizers:
     - resources-finalizer.argocd.argoproj.io/foreground
 spec:
@@ -15,7 +15,7 @@ spec:
     preserveResourcesOnDeletion: false
   template:
     metadata:
-      name: {{ .Values.spec.product }}-{{ .Values.spec.service }}-prod-4-app-{{`{{appCount}}`}}
+      name: prod-{{ .Values.spec.product }}-{{ .Values.spec.service }}-appset-4-app-{{`{{appCount}}`}}
       finalizers:
         - resources-finalizer.argocd.argoproj.io/foreground
     spec:
