--- a/single-service-chart/Chart.yaml
+++ b/single-service-chart/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: services
+name: single-service
 description: Applications
 
 # A chart can be either an 'application' or a 'library' chart.
