--- a/single-service-chart/templates/service-1.yaml
+++ b/single-service-chart/templates/service-1.yaml
@@ -20,7 +20,7 @@ spec:
     namespace: {{ .Values.spec.runtimeNamespace }}
   syncPolicy:
     automated:
-      prune: false
+      prune: true
       selfHeal: true
       allowEmpty: false
     syncOptions:
