--- a/gs-apps/test-app.yaml
+++ b/gs-apps/test-app.yaml
@@ -14,6 +14,8 @@ spec:
       valuesObject:
         spec:
           product: test-app
+          prod:
+            cluster: scale-test
   destination:
     name: in-cluster
     namespace: cf-runtime
