--- a/services-chart/templates/service-8.yaml
+++ b/services-chart/templates/service-8.yaml
@@ -20,7 +20,7 @@ spec:
     namespace: {{ .Values.spec.runtimeNamespace }}
   syncPolicy:
     automated:
-      prune: false
+      prune: true
       selfHeal: true
       allowEmpty: false
     syncOptions:
