--- a/single-service-chart/templates/service-1.yaml
+++ b/single-service-chart/templates/service-1.yaml
@@ -15,6 +15,8 @@ spec:
         spec:
           service: service-1
           product: {{ .Values.spec.product }}
+          prod:
+            cluster: {{ .Values.spec.prod.cluster }}
   destination:
     name: in-cluster
     namespace: {{ .Values.spec.runtimeNamespace }}
