add prune + add values to services

--- a/apps-chart/templates/dev-app-1.yaml
+++ b/apps-chart/templates/dev-app-1.yaml
@@ -15,7 +15,7 @@ spec:
     namespace: {{ .Values.spec.product }}-{{ .Values.spec.service }}
   syncPolicy:
     automated:
-      prune: false
+      prune: true
       selfHeal: true
       allowEmpty: false
     syncOptions:
