--- a/services-chart/values.yaml
+++ b/services-chart/values.yaml
@@ -1,2 +1,11 @@
 spec:
+  product: test-product
   runtimeNamespace: cf-runtime
+  prod:
+    repoUrl: https://github.com/yaroslav-codefresh/argocd-example-apps.git
+    cluster: in-cluster
+    path: helm-guestbook
+  dev:
+    repoUrl: https://github.com/yaroslav-codefresh/argocd-example-apps.git
+    cluster: in-cluster
+    path: helm-guestbook
