--- a/apps-chart/templates/prod-appset-5.yaml
+++ b/apps-chart/templates/prod-appset-5.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
-  name: prod-{{ .Values.spec.product }}-{{ .Values.spec.service }}-prod-appset-5
+  name: prod-{{ .Values.spec.product }}-{{ .Values.spec.service }}-appset-5
   finalizers:
     - resources-finalizer.argocd.argoproj.io/foreground
 spec:
