--- a/gs-apps/test-app.yaml
+++ b/gs-apps/test-app.yaml
@@ -2,6 +2,8 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: test-app
+  annotations:
+    "codefresh.io/product": test-app
   finalizers:
     - resources-finalizer.argocd.argoproj.io/foreground
 spec:
