--- a/single-service-chart/templates/service-1.yaml
+++ b/single-service-chart/templates/service-1.yaml
@@ -2,6 +2,8 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: {{ .Values.spec.product }}-service-1
+  annotations:
+    "codefresh.io/product": {{ .Values.spec.product }}
   finalizers:
     - resources-finalizer.argocd.argoproj.io/foreground
 spec:
