--- a/gs-apps/test-app.yaml
+++ b/gs-apps/test-app.yaml
@@ -19,8 +19,12 @@ spec:
           runtimeNamespace: argo-load
           prod:
             cluster: scale-prod
+            path: prod
+            repoUrl: https://github.com/oleksandr-codefresh/argo-load-product-1
           dev:
             cluster: scale-test
+            path: dev
+            repoUrl: https://github.com/oleksandr-codefresh/argo-load-product-1
   destination:
     name: in-cluster
     namespace: argo-load
