--- a/gs-apps/test-app.yaml
+++ b/gs-apps/test-app.yaml
@@ -20,11 +20,21 @@ spec:
             prod:
               cluster: scale-prod
               path: prod
-              repoUrl: https://github.com/oleksandr-codefresh/argo-load-product-1
+              repoUrl: https://github.com/oleksandr-codefresh/argo-load-product
             dev:
               cluster: scale-test
               path: dev
-              repoUrl: https://github.com/oleksandr-codefresh/argo-load-product-1
+              repoUrl: https://github.com/oleksandr-codefresh/argo-load-product
+          - product: test-app-2
+            runtimeNamespace: argo-load-2
+            prod:
+              cluster: scale-prod
+              path: prod
+              repoUrl: https://github.com/oleksandr-codefresh/argo-load-product
+            dev:
+              cluster: scale-test
+              path: dev
+              repoUrl: https://github.com/oleksandr-codefresh/argo-load-product
   destination:
     name: in-cluster
     namespace: argo-load
