added labels to be able quicly delete resources

--- a/apps-chart/templates/dev-app-3.yaml
+++ b/apps-chart/templates/dev-app-3.yaml
@@ -4,6 +4,8 @@ metadata:
   name: dev-{{ .Values.spec.product }}-{{ .Values.spec.service }}-app-3
   annotations:
     "codefresh.io/product": {{ .Values.spec.product }}
+  labels:
+    cf.load-test: true
   finalizers:
     - resources-finalizer.argocd.argoproj.io/foreground
 spec:
