--- a/apps-chart/templates/dev-app-1.yaml
+++ b/apps-chart/templates/dev-app-1.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     "codefresh.io/product": {{ .Values.spec.product }}
   labels:
-    cf.load-test: true
+    cf.load-test: "true"
   finalizers:
     - resources-finalizer.argocd.argoproj.io/foreground
 spec:
