--- a/services-chart/templates/service-1.yaml
+++ b/services-chart/templates/service-1.yaml
@@ -1,4 +1,3 @@
-{{- range $i := 10 }}
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -11,19 +10,19 @@ spec:
     path: apps-chart
     repoURL: https://github.com/yaroslav-codefresh/scale-test.git
     targetRevision: HEAD
-#    helm:
-#      valuesObject:
-#        spec:
-#          service: service-1
-#          product: {{ .Values.spec.product }}
-#          prod:
-#            repoUrl: {{ .Values.spec.prod.repoUrl }}-{{ $i }}
-#            cluster: {{ .Values.spec.prod.cluster }}
-#            path: {{ .Values.spec.prod.path }}
-#          dev:
-#            repoUrl: {{ .Values.spec.dev.repoUrl }}-{{ $i }}
-#            cluster: {{ .Values.spec.dev.cluster }}
-#            path: {{ .Values.spec.dev.path }}
+    helm:
+      valuesObject:
+        spec:
+          service: service-1
+          product: {{ .Values.spec.product }}
+          prod:
+            repoUrl: {{ .Values.spec.prod.repoUrl }}-1
+            cluster: {{ .Values.spec.prod.cluster }}
+            path: {{ .Values.spec.prod.path }}
+          dev:
+            repoUrl: {{ .Values.spec.prod.repoUrl }}-1
+            cluster: {{ .Values.spec.dev.cluster }}
+            path: {{ .Values.spec.dev.path }}
   destination:
     name: in-cluster
     namespace: {{ .Values.spec.runtimeNamespace }}
@@ -41,4 +40,3 @@ spec:
       - ApplyOutOfSyncOnly=false
       - ServerSideApply=true
       - RespectIgnoreDifferences=false
-{{- end }}
