--- a/services-chart/values.yaml
+++ b/services-chart/values.yaml
@@ -2,10 +2,10 @@ spec:
   product: test-product
   runtimeNamespace: cf-runtime
   prod:
-    repoUrl: https://github.com/yaroslav-codefresh/argocd-example-apps.git
+    repoUrl: https://github.com/oleksandr-codefresh/argo-load-product
     cluster: in-cluster
     path: helm-guestbook
   dev:
-    repoUrl: https://github.com/yaroslav-codefresh/argocd-example-apps.git
+    repoUrl: https://github.com/oleksandr-codefresh/argo-load-product
     cluster: in-cluster
     path: helm-guestbook
