--- a/gs-apps/dev-app-1.yaml
+++ b/gs-apps/dev-app-1.yaml
@@ -25,5 +25,5 @@
 #      - Validate=true
 #      - CreateNamespace=true
 #      - ApplyOutOfSyncOnly=false
-#      - ServerSideApply=true
+#      - ServerSideApply=false
 #      - RespectIgnoreDifferences=false
