--- a/apps-chart/templates/dev-app-5.yaml
+++ b/apps-chart/templates/dev-app-5.yaml
@@ -29,5 +29,5 @@ spec:
       - Validate=true
       - CreateNamespace=true
       - ApplyOutOfSyncOnly=false
-      - ServerSideApply=true
+      - ServerSideApply=false
       - RespectIgnoreDifferences=false
