--- a/apps-chart/templates/prod-appset-1.yaml
+++ b/apps-chart/templates/prod-appset-1.yaml
@@ -47,5 +47,5 @@ spec:
           - Validate=true
           - CreateNamespace=true
           - ApplyOutOfSyncOnly=false
-          - ServerSideApply=true
+          - ServerSideApply=false
           - RespectIgnoreDifferences=false
