--- a/apps-chart/templates/prod-appset-3.yaml
+++ b/apps-chart/templates/prod-appset-3.yaml
@@ -45,5 +45,5 @@ spec:
           - Validate=true
           - CreateNamespace=true
           - ApplyOutOfSyncOnly=false
-          - ServerSideApply=true
+          - ServerSideApply=false
           - RespectIgnoreDifferences=false
