--- a/gs-apps/productA.yaml
+++ b/gs-apps/productA.yaml
@@ -40,5 +40,5 @@ spec:
       - Validate=true
       - CreateNamespace=true
       - ApplyOutOfSyncOnly=false
-      - ServerSideApply=true
+      - ServerSideApply=false
       - RespectIgnoreDifferences=false
