--- a/single-service-chart/templates/service-1.yaml
+++ b/single-service-chart/templates/service-1.yaml
@@ -41,6 +41,6 @@ spec:
       - Validate=true
       - CreateNamespace=true
       - ApplyOutOfSyncOnly=false
-      - ServerSideApply=true
+      - ServerSideApply=false
       - RespectIgnoreDifferences=false
   {{- end }}
