--- a/services-chart/templates/service-7.yaml
+++ b/services-chart/templates/service-7.yaml
@@ -30,7 +30,7 @@ spec:
     automated:
       prune: true
       selfHeal: true
-      allowEmpty: false
+      allowEmpty: true
     syncOptions:
       - PrunePropagationPolicy=foreground
       - Replace=false
