appset 1 to dev cluster

--- a/apps-chart/templates/prod-appset-1.yaml
+++ b/apps-chart/templates/prod-appset-1.yaml
@@ -31,7 +31,7 @@
 #        repoURL: {{ .Values.spec.prod.repoUrl }}
 #        targetRevision: HEAD
 #      destination:
-#        name: {{ .Values.spec.prod.cluster }}
+#        name: {{ .Values.spec.dev.cluster }}
 #        namespace: {{ .Values.spec.product }}-{{ .Values.spec.service }}
 #      syncPolicy:
 #        automated:
