--- a/single-service-chart/templates/service-1.yaml
+++ b/single-service-chart/templates/service-1.yaml
@@ -28,7 +28,7 @@ spec:
             repoUrl: https://github.com/oleksandr-codefresh/argo-load-product-{{ $i }}
   destination:
     name: in-cluster
-    namespace: argo-load
+    namespace: {{ $spec.runtimeNamespace }}
   syncPolicy:
     automated:
       prune: true
