--- a/sandbox-1/dev-app-2.yaml
+++ b/sandbox-1/dev-app-2.yaml
@@ -9,7 +9,7 @@
 #spec:
 #  project: default
 #  source:
-#    path: single-service-chart
+#    path: charts/single-service-chart
 #    repoURL: https://github.com/yaroslav-codefresh/scale-test.git
 #    targetRevision: HEAD
 #    helm:
