--- a/charts/single-service-chart/templates/service-1.yaml
+++ b/charts/single-service-chart/templates/service-1.yaml
@@ -1,10 +1,7 @@
-{{- range $i, $spec := .Values.specs }}
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: {{ $spec.product }}-service-1
-  annotations:
-    "codefresh.io/product": {{ $spec.product }}
+  name: {{ .Values.spec.product }}-service-1
   finalizers:
     - resources-finalizer.argocd.argoproj.io/foreground
 spec:
@@ -17,18 +14,18 @@ spec:
       valuesObject:
         spec:
           service: service-1
-          product: {{ $spec.product }}
+          product: {{ .Values.spec.product }}
           prod:
-            cluster: scale-prod
-            path: prod
-            repoUrl: https://github.com/oleksandr-codefresh/argo-load-product-{{ $i }}
+            repoUrl: {{ .Values.spec.prod.repoUrl }}-1
+            cluster: {{ .Values.spec.prod.cluster }}
+            path: {{ .Values.spec.prod.path }}
           dev:
-            cluster: scale-test
-            path: dev
-            repoUrl: https://github.com/oleksandr-codefresh/argo-load-product-{{ $i }}
+            repoUrl: {{ .Values.spec.prod.repoUrl }}-1
+            cluster: {{ .Values.spec.dev.cluster }}
+            path: {{ .Values.spec.dev.path }}
   destination:
     name: in-cluster
-    namespace: {{ $spec.runtimeNamespace }}
+    namespace: {{ .Values.spec.runtimeNamespace }}
   syncPolicy:
     automated:
       prune: true
@@ -43,4 +40,3 @@ spec:
       - ApplyOutOfSyncOnly=false
       - ServerSideApply=false
       - RespectIgnoreDifferences=false
-  {{- end }}
