add uninstall command + fix values

--- a/values/new-reporter.yaml
+++ b/values/new-reporter.yaml
@@ -7,6 +7,10 @@ argo-cd:
   eventReporter:
     enabled: true
     version: v2
+    image:
+      repository: "docker.io/xeonalex/personal-argocd-dev"
+      tag: "reporting-v2-test-v20"
+      imagePullPolicy: "Always"
   server:
     image:
       repository: "docker.io/xeonalex/personal-argocd-dev"
